# python-spacetraders

./: .gitignore  README.md  generate.sh  openapi-client.yml  pyproject.toml
openapi-client-template/: api_init.py.jinja  client.py.jinja  endpoint_init.py.jinja
spacetraders/: client.py
spacetraders/api/: __init__.py
spacetraders/models/: __init__.py  accept_contract_response_200.py  agent.py  chart.py  construction.py  contract.py  contract_payment.py  contract_terms.py  create_ship_system_scan_response_201_data.py  create_ship_waypoint_scan_response_201_data.py  create_survey_response_201_data.py  deliver_contract_response_200_data.py  dock_ship_200_response.py  dock_ship_dock_ship_200_response.py  dock_ship_dock_ship_200_response_data.py  extract_resources_json_body.py  extraction.py  fulfill_contract_response_200_data.py  get_contract_response_200.py  get_contracts_response_200.py  get_faction_response_200.py  get_market_response_200.py  get_mounts_get_mounts_200_response.py  get_my_agent_response_200.py  get_my_ship_response_200.py  get_ship_cooldown_response_200.py  get_ship_nav_response_200.py  get_status_response_200_leaderboards_most_submitted_charts_item.py  get_status_response_200_server_resets.py  get_system_response_200.py  get_waypoint_response_200.py  install_mount_201_response_data.py  install_mount_install_mount_201_response.py  install_mount_install_mount_201_response_data.py  install_mount_install_mount_request.py  jump_gate.py  (+68 more)
spacetraders_api_client/: __init__.py  types.py
spacetraders_client/: get_my_agent.py  get_status.py  register.py
spacetraders_generator/: cli.py
(+418 files in other folders)
